# CodeGuard-7B-The-Secure-First-AI-Auditor

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: quality_cheks.yaml
database/: chroma_conf.py
notebooks/: CodeGaurd_v0.ipynb
src/: app.py  core.py  inference.py  main.py
src/data_gen/: generate.py  inference_local.py  preprocess.py  upload.py
tests/: test_data_gen.py
